cluster/apps/media-server/jellyseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: ghcr.io/fallenbagel/jellyseerr:2.7.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5055
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: jellyseerr-config
              mountPath: /app/config
      volumes:
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
